Animation based on background image

--- a/webextensions/sidebar/sidebar.html
+++ b/webextensions/sidebar/sidebar.html
@@ -66,11 +66,15 @@
     <div class="tab-drop-blocker" id="tab-drop-blocker-left"></div>
     <ul id="dummy-tabs">
       <span id="dummy-favicon-size-box"></span>
-      <li id="dummy-tab" class="tab loading">
+      <li id="dummy-tab" class="tab">
         <span class="favicon"><span id="master-throbber-container"><span id="master-throbber"></span></span></span>
+        <span class="favicon"><span class="master-colored-throbber" id="master-throbber-inactive"></span></span>
         <span class="label">-</span>
         <span class="counter">0</span>
         <span class="closebox"></button>
+      </li>
+      <li id="dummy-active-tab" class="tab active">
+        <span class="favicon"><span class="master-colored-throbber" id="master-throbber-active"></span></span>
       </li>
     </ul>
     <div id="blocking-screen">
